Secured integration dispatcher and service